--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     },
     "dependencies": {
         "@reduxjs/toolkit": "^1.9.5",
+        "axios": "^1.4.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-redux": "^8.0.5"
+        "react-redux": "^8.0.5",
+        "react-router-dom": "^6.11.1"
     },
     "devDependencies": {
         "@types/node": "^20.1.2",
