--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@mdi/js": "^7.2.96",
         "@reduxjs/toolkit": "^1.9.5",
         "axios": "^1.4.0",
+        "date-fns": "^2.30.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^8.0.5",
-        "react-router-dom": "^6.11.1"
+        "react-router-dom": "^6.11.1",
+        "uuid": "^9.0.0"
     },
     "devDependencies": {
         "@types/node": "^20.1.2",
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.11",
+        "@types/uuid": "^9.0.1",
         "@typescript-eslint/eslint-plugin": "^5.57.1",
         "@typescript-eslint/parser": "^5.57.1",
         "@vitejs/plugin-react-swc": "^3.0.0",
