--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
         "@reduxjs/toolkit": "^1.9.5",
         "axios": "^1.4.0",
         "date-fns": "^2.30.0",
+        "i18next": "^22.4.15",
+        "i18next-browser-languagedetector": "^7.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-helmet-async": "^1.3.0",
+        "react-i18next": "^12.3.0",
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.11.1",
         "uuid": "^9.0.0"
